@@ -18,6 +18,13 @@
       <charset>us-ascii</charset>
     </text>
   </lang>
+  <autodetect>
+    <usb>
+      <commandset>MLC,PCL,PML,DESKJET,DW-PCL,DYN</commandset>
+      <manufacturer>HP</manufacturer>
+      <model>Deskjet 1280</model>
+    </usb>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hplip</driver>
   <comments>
